--- a/Databasic.MsSql.vbproj
+++ b/Databasic.MsSql.vbproj
@@ -74,7 +74,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Resource.vb" />
+    <Compile Include="ProviderResource.vb" />
     <Compile Include="Statement.vb" />
     <Compile Include="Transaction.vb" />
   </ItemGroup>
